<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_marginTop"
            android:text="@string/app_name"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/home_refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/refreshButton_marginRight"
            android:contentDescription="@string/contentDescription_refresh"
            android:contextClickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@android:drawable/ic_popup_sync" />

        <LinearLayout
            android:id="@+id/stock_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_refreshButton">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_owningQuantity"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/home_currentMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_defaultOwingQuantity"
                android:textSize="80sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/home_textTimeSinceLastWithdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neverWithdrawn"
            app:layout_constraintBottom_toTopOf="@+id/return_block"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stock_block" />

        <LinearLayout
            android:id="@+id/return_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stock_block">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/home_buttonWithdrawn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/withdrawn"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/home_buttonHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60sp"
                android:text="@string/history"
                app:cornerRadius="20dp" />

        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>